--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --config webpack.dev.config.js --open --color",
-    "build":
-      "rimraf build && webpack --config webpack.prod.config.js --progress --profile --color",
+    "build": "rimraf build && webpack --config webpack.prod.config.js --progress --profile --color",
     "build:lib": "babel component -d lib",
     "build:style": "sass css/main.scss:css/main.css",
     "docx": "serve -s build --open"
@@ -22,19 +21,19 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "core-js": "^2.5.3",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.10",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.9",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
-    "postcss-loader": "^2.0.9",
+    "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
-    "serve": "^6.4.9",
+    "serve": "^6.4.11",
     "style-loader": "^0.19.1",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1",
     "webpack-glob": "^2.0.2"
   },
   "dependencies": {
