--- a/package.json
+++ b/package.json
@@ -28,20 +28,20 @@
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
-    "serve": "^6.4.11",
+    "serve": ">=7.1.3",
     "style-loader": "^0.19.1",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-glob": "^2.0.2"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "immutable": "^3.8.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-router-dom": "5.0.0"
   },
   "repository": {
     "type": "git",
